kubernetes/minikube/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app
  annotations:
    ginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/polls
            backend:
              service:
                name: poll-service
                port:
                  number: 30000
            pathType: Prefix
          - path: /api/votes
            backend:
              service:
                name: vote-service
                port:
                  number: 31000
            pathType: Prefix
